--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   http: ^1.2.2
   flutter_rating_bar: ^4.0.1
+  curved_navigation_bar: ^1.0.6
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
